--- a/src/main/resources/templates/HomePage.html
+++ b/src/main/resources/templates/HomePage.html
@@ -5,21 +5,22 @@
     <title>this is a desperate plea for help</title>
 </head>
 <body>
-<table>
+<table border="1">
 <tr>
-<iframe width="100%" height="125" scrolling="no" frameborder="yes" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1096685155&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false"></iframe>
+<iframe width="90%" height="125" scrolling="no" frameborder="yes" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1096685155&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false">
+    <button type="button">Add to Cart</button>
+</iframe>
 <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
     <a href="https://soundcloud.com/derelictnoisehole" title="SAMPLE_TEXT" target="_blank"
        style="color: #cccccc; text-decoration: none;"></a> <a
         href="https://soundcloud.com/derelictnoisehole/the-roots-glitchesremix" title="sample text" target="_blank"
-        style="color: #cccccc; text-decoration: none;">SAMPLE_TEXT</a></div>
+        style="color: #cccccc; text-decoration: none;"></a></div>
 </tr>
 
-<button type="button">Add to Cart</button>
-<a href="PaymentForm.html">
-    <button type="submit">Checkout</button>
-</a>
+
+<div></div>
+<a href="PaymentForm.html"> <button type="submit">Checkout</button> </a>
 </table>
 </body>
 </html>
