Added bootstrap code to HomePage.html

--- a/src/main/resources/templates/HomePage.html
+++ b/src/main/resources/templates/HomePage.html
@@ -1,26 +1,116 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>this is a desperate plea for help</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-<table border="1">
-<tr>
-<iframe width="90%" height="125" scrolling="no" frameborder="yes" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1096685155&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false">
-    <button type="button">Add to Cart</button>
-</iframe>
-<div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-    <a href="https://soundcloud.com/derelictnoisehole" title="SAMPLE_TEXT" target="_blank"
-       style="color: #cccccc; text-decoration: none;"></a> <a
-        href="https://soundcloud.com/derelictnoisehole/the-roots-glitchesremix" title="sample text" target="_blank"
-        style="color: #cccccc; text-decoration: none;"></a></div>
-</tr>
+<div class="container">
+    <div class="row row-cols-1">
+        <iframe width="85%" height="125" scrolling="yes" frameborder="yes" allow="autoplay"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1096685155&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false">
+        </iframe>
+        <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+            <a href="https://soundcloud.com/derelictnoisehole" title="SAMPLE_TEXT" target="_blank"
+               style="color: #cccccc; text-decoration: none;"></a><a
+                href="https://soundcloud.com/derelictnoisehole/the-roots-glitchesremix" title="sample text"
+                target="_blank"
+                style="color: #cccccc; text-decoration: none;"></a></div>
+        <div class="col align-self-end">
+            <input type="checkbox" class="btn-check" id="GlitchesCart" autocomplete="off">
+            <label class="btn btn-primary" for="GlitchesCart">Add to Cart</label>
+        </div>
+    </div>
+</div>
+</div>
+</div>
+
+<div style="height:30px; margin:0 auto;">
+
+</div>
+<div class="container">
+    <div class="row row-cols-1">
+        <iframe width="85%" height="125" scrolling="yes" frameborder="yes" allow="autoplay"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1082372917&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false">
+        </iframe>
+        <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+            <a href="https://soundcloud.com/derelictnoisehole" title="SAMPLE_TEXT" target="_blank"
+               style="color: #cccccc; text-decoration: none;"></a><a
+                href="https://soundcloud.com/derelictnoisehole/nycompression" title="sample text"
+                target="_blank"
+                style="color: #cccccc; text-decoration: none;"></a></div>
+        <div class="col align-self-end">
+            <input type="checkbox" class="btn-check" id="NYCompressionCart" autocomplete="off">
+            <label class="btn btn-primary" for="NYCompressionCart">Add to Cart</label>
+        </div>
+    </div>
+</div>
+
+<div style="height:30px; margin:0 auto;">
+
+</div>
+<div class="container">
+    <div class="row row-cols-1">
+        <iframe width="85%" height="125" scrolling="yes" frameborder="yes" allow="autoplay"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1022636293&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false">
+        </iframe>
+        <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+            <a href="https://soundcloud.com/derelictnoisehole" title="SAMPLE_TEXT" target="_blank"
+               style="color: #cccccc; text-decoration: none;"></a><a
+                href="https://soundcloud.com/derelictnoisehole/bad-mood" title="sample text"
+                target="_blank"
+                style="color: #cccccc; text-decoration: none;"></a></div>
+        <div class="col align-self-end">
+            <input type="checkbox" class="btn-check" id="BadMoodCart" autocomplete="off">
+            <label class="btn btn-primary" for="BadMoodCart">Add to Cart</label>
+        </div>
+    </div>
+</div>
+
+<div style="height:30px; margin:0 auto;">
+
+</div>
+<div class="container">
+    <div class="row row-cols-1">
+        <iframe width="85%" height="125" scrolling="yes" frameborder="yes" allow="autoplay"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/937590901&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false">
+        </iframe>
+        <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+            <a href="https://soundcloud.com/derelictnoisehole" title="SAMPLE_TEXT" target="_blank"
+               style="color: #cccccc; text-decoration: none;"></a><a
+                href="https://soundcloud.com/derelictnoisehole/zrkl7pmru5ip" title="sample text"
+                target="_blank"
+                style="color: #cccccc; text-decoration: none;"></a></div>
+        <div class="col align-self-end">
+            <input type="checkbox" class="btn-check" id="般若Cart" autocomplete="off">
+            <label class="btn btn-primary" for="般若Cart">Add to Cart</label>
+        </div>
+    </div>
+</div>
 
 
-<div></div>
-<a href="PaymentForm.html"> <button type="submit">Checkout</button> </a>
-</table>
+<div style="height:30px; margin:0 auto;">
+
+</div>
+<div class="container">
+    <div class="row row-cols-1">
+        <iframe width="85%" height="125" scrolling="yes" frameborder="yes" allow="autoplay"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/937590895&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false">
+        </iframe>
+        <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+            <a href="https://soundcloud.com/derelictnoisehole" title="SAMPLE_TEXT" target="_blank"
+               style="color: #cccccc; text-decoration: none;"></a><a
+                href="https://soundcloud.com/derelictnoisehole/7jcmxsqgzz1h" title="sample text"
+                target="_blank"
+                style="color: #cccccc; text-decoration: none;"></a></div>
+        <div class="col align-self-end">
+            <input type="checkbox" class="btn-check" id="怪士Cart" autocomplete="off">
+            <label class="btn btn-primary" for="怪士Cart">Add to Cart</label>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
