reformated HomePage.html bootstrap to display mock prices.

--- a/src/main/resources/templates/HomePage.html
+++ b/src/main/resources/templates/HomePage.html
@@ -7,9 +7,9 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
     <div class="row row-cols-1">
-        <iframe width="85%" height="125" scrolling="yes" frameborder="yes" allow="autoplay"
+        <iframe width="80%" height="125" scrolling="yes" frameborder="yes" allow="autoplay"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1096685155&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false">
         </iframe>
         <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -18,21 +18,25 @@
                 href="https://soundcloud.com/derelictnoisehole/the-roots-glitchesremix" title="sample text"
                 target="_blank"
                 style="color: #cccccc; text-decoration: none;"></a></div>
-        <div class="col align-self-end">
-            <input type="checkbox" class="btn-check" id="GlitchesCart" autocomplete="off">
-            <label class="btn btn-primary" for="GlitchesCart">Add to Cart</label>
+        <div>
+            <p style="font-size: 35px" class="col align-self-end">$40</p>
+            <div class="col align-self-center">
+                <div class="invisible">
+                    <input type="checkbox" class="btn-check" id="GlitchesCart" autocomplete="off">
+                </div>
+                <label class="btn btn-primary" for="GlitchesCart">Add to Cart</label>
+            </div>
         </div>
     </div>
 </div>
-</div>
-</div>
+
 
 <div style="height:30px; margin:0 auto;">
 
 </div>
-<div class="container">
+<div class="container-fluid">
     <div class="row row-cols-1">
-        <iframe width="85%" height="125" scrolling="yes" frameborder="yes" allow="autoplay"
+        <iframe width="80%" height="125" scrolling="yes" frameborder="yes" allow="autoplay"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1082372917&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false">
         </iframe>
         <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -41,9 +45,14 @@
                 href="https://soundcloud.com/derelictnoisehole/nycompression" title="sample text"
                 target="_blank"
                 style="color: #cccccc; text-decoration: none;"></a></div>
-        <div class="col align-self-end">
-            <input type="checkbox" class="btn-check" id="NYCompressionCart" autocomplete="off">
-            <label class="btn btn-primary" for="NYCompressionCart">Add to Cart</label>
+        <div>
+            <p style="font-size: 35px" class="col align-self-end">$30</p>
+            <div class="col align-self-end">
+                <div class="invisible">
+                    <input type="checkbox" class="btn-check" id="NYCompressionCart" autocomplete="off">
+                </div>
+                <label class="btn btn-primary" for="NYCompressionCart">Add to Cart</label>
+            </div>
         </div>
     </div>
 </div>
@@ -51,9 +60,10 @@
 <div style="height:30px; margin:0 auto;">
 
 </div>
-<div class="container">
+<div class="container-fluid">
+
     <div class="row row-cols-1">
-        <iframe width="85%" height="125" scrolling="yes" frameborder="yes" allow="autoplay"
+        <iframe width="80%" height="125" scrolling="yes" frameborder="yes" allow="autoplay"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1022636293&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false">
         </iframe>
         <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -62,19 +72,23 @@
                 href="https://soundcloud.com/derelictnoisehole/bad-mood" title="sample text"
                 target="_blank"
                 style="color: #cccccc; text-decoration: none;"></a></div>
-        <div class="col align-self-end">
-            <input type="checkbox" class="btn-check" id="BadMoodCart" autocomplete="off">
-            <label class="btn btn-primary" for="BadMoodCart">Add to Cart</label>
+        <div>
+            <p style="font-size: 35px" class="col align-self-end">$30</p>
+            <div class="col align-self-end">
+                <div class="invisible">
+                    <input type="checkbox" class="btn-check" id="BadMoodCart" autocomplete="off">
+                </div>
+                <label class="btn btn-primary" for="BadMoodCart">Add to Cart</label>
+            </div>
         </div>
     </div>
 </div>
-
 <div style="height:30px; margin:0 auto;">
 
 </div>
-<div class="container">
+<div class="container-fluid">
     <div class="row row-cols-1">
-        <iframe width="85%" height="125" scrolling="yes" frameborder="yes" allow="autoplay"
+        <iframe width="80%" height="125" scrolling="yes" frameborder="yes" allow="autoplay"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/937590901&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false">
         </iframe>
         <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -83,9 +97,14 @@
                 href="https://soundcloud.com/derelictnoisehole/zrkl7pmru5ip" title="sample text"
                 target="_blank"
                 style="color: #cccccc; text-decoration: none;"></a></div>
-        <div class="col align-self-end">
-            <input type="checkbox" class="btn-check" id="般若Cart" autocomplete="off">
-            <label class="btn btn-primary" for="般若Cart">Add to Cart</label>
+        <div>
+            <p style="font-size: 35px" class="col align-self-end">$30</p>
+            <div class="col align-self-end">
+                <div class="invisible">
+                    <input type="checkbox" class="btn-check" id="般若Cart" autocomplete="off">
+                </div>
+                <label class="btn btn-primary" for="般若Cart">Add to Cart</label>
+            </div>
         </div>
     </div>
 </div>
@@ -94,9 +113,9 @@
 <div style="height:30px; margin:0 auto;">
 
 </div>
-<div class="container">
+<div class="container-fluid">
     <div class="row row-cols-1">
-        <iframe width="85%" height="125" scrolling="yes" frameborder="yes" allow="autoplay"
+        <iframe width="80%" height="125" scrolling="yes" frameborder="yes" allow="autoplay"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/937590895&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false">
         </iframe>
         <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -105,12 +124,16 @@
                 href="https://soundcloud.com/derelictnoisehole/7jcmxsqgzz1h" title="sample text"
                 target="_blank"
                 style="color: #cccccc; text-decoration: none;"></a></div>
-        <div class="col align-self-end">
-            <input type="checkbox" class="btn-check" id="怪士Cart" autocomplete="off">
-            <label class="btn btn-primary" for="怪士Cart">Add to Cart</label>
+        <div>
+            <p style="font-size: 35px" class="col align-self-end">$30</p>
+            <div class="col align-self-end">
+                <div class="invisible">
+                    <input type="checkbox" class="btn-check" id="怪士Cart" autocomplete="off">
+                </div>
+                <label class="btn btn-primary" for="怪士Cart">Add to Cart</label>
+            </div>
         </div>
     </div>
 </div>
-
 </body>
 </html>
