adjusted HomePage.html adjusted PaymentForm.html

--- a/src/main/resources/templates/HomePage.html
+++ b/src/main/resources/templates/HomePage.html
@@ -19,13 +19,14 @@
                 target="_blank"
                 style="color: #cccccc; text-decoration: none;"></a></div>
         <div>
-            <p style="font-size: 35px" class="col align-self-end">$40</p>
+            <p style="font-size: 35px" class="col align-self-end">$30</p>
             <div class="col align-self-center">
                 <div class="invisible">
                     <input type="checkbox" class="btn-check" id="GlitchesCart" autocomplete="off">
                 </div>
                 <label class="btn btn-primary" for="GlitchesCart">Add to Cart</label>
             </div>
+            <input type="button"> Proceed to Checkout</input>
         </div>
     </div>
 </div>
